--- a/app/src/main/res/layout/book_driver.xml
+++ b/app/src/main/res/layout/book_driver.xml
@@ -177,6 +177,11 @@
                 android:layout_height="wrap_content"
                 android:padding="15dp"
                 />
+            <Spinner
+                android:id="@+id/chooseCity"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="20dp" />
             <Button
                 android:id="@+id/book"
                 android:layout_width="150dp"
